--- a/course2/Week3Code.ipynb
+++ b/course2/Week3Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,31 +17,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week3 code1 Huffman coding (Greedy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Node():\n",
-    "    def __init__(self):\n",
-    "        self.isleaf = None\n",
-    "        self.father = None\n",
-    "        self.children = []\n",
-    "        self.value = None\n"
+    "## Week3 code1 Median Maintenance with heap"
    ]
   },
   {
@@ -50,9 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# heapq class\n",
+    "# heap class, using heapq package\n",
     "class Heap(object):\n",
-    "    \n",
     "    def __init__(self, initial=None, key=lambda x:x , reverse = False):\n",
     "        self.key = key\n",
     "        if initial:\n",
@@ -76,95 +54,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 8, 9, 4, 12, 9, 11, 13, 7]\n",
+      "[4, 4, 8, 9, 4, 12, 9, 11, 13, 7, 10]\n",
+      "[4, 4, 5, 9, 4, 8, 9, 11, 13, 7, 10, 12]\n",
+      "[12, 4, 5, 9, 4, 8, 9, 11, 13, 7, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Heap class implementation using list\n",
+    "class Heap(object):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self._data = [4,4,8,9,4,12,9,11,13]\n",
+    "        \n",
+    "    def insert(self, item):\n",
+    "        self._data.append(item)\n",
+    "        location = len(self._data)\n",
+    "        \n",
+    "        while item <= self._data[location//2 -1]:\n",
+    "            self._data[location-1], self._data[location//2 -1] = self._data[location//2 -1],self._data[location-1] \n",
+    "            location = location//2\n",
+    "        print(self._data)\n",
+    "    \n",
+    "    def popmin(self):\n",
+    "        minvalue = self._data[0]\n",
+    "        \n",
+    "        self._data[0], self._data[len(self._data)-1] = self._data[len(self._data)-1], self._data[0]\n",
+    "        self._data = self._data[:-1]\n",
+    "        \n",
+    "        \n",
+    "        data = self._data\n",
+    "        \n",
+    "        \n",
+    "        loc = 0\n",
+    "        nextloc1 = (loc+1)*2 -1\n",
+    "        nextloc2 = (loc+1)*2 \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        while data[loc]>\n",
+    "                \n",
+    "            \n",
+    "        \n",
+    "        print(data)\n",
+    "        return minvalue\n",
+    "        \n",
+    "\n",
+    "heap = Heap()\n",
+    "\n",
+    "heap.insert(7)\n",
+    "heap.insert(10)\n",
+    "heap.insert(5)\n",
+    "\n",
+    "assert heap.popmin() == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Huffman(Model):\n",
+    "class TwoHeapsMedian(Model):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
     "        \n",
     "    def preprocess(self):\n",
-    "        self.data = self.dataLoader.data[1:]\n",
+    "        self.data = self.dataLoader.data\n",
     "        self.codedict = {}\n",
     "    \n",
     "    \n",
-    "    def expend_fathernode(self,node):\n",
-    "        if node.isleaf == True:\n",
-    "            self.codedict[int(node.id[0])] = node.code\n",
-    "            return \n",
     "\n",
-    "        for index in range(len(node.children)):\n",
-    "            if index == 0:\n",
-    "                node.children[index].code =node.code +  '0'\n",
-    "                self.expend_fathernode(node.children[index])\n",
-    "\n",
-    "            if index == 1:\n",
-    "                node.children[index].code =node.code +   '1'\n",
-    "                self.expend_fathernode(node.children[index])\n",
-    "\n",
-    "        \n",
-    "        \n",
     "        \n",
     "    def model(self):\n",
-    "        \n",
-    "        indexed_data = dict(zip(range(len(self.data)),self.data))\n",
-    "        listed_data = list(zip(self.data,range(len(self.data))))\n",
-    "        listed_data = [(i[0][0],(i[1])) for i in listed_data]\n",
-    "        \n",
-    "        # Initialize heapq\n",
-    "        hp = Heap(listed_data, key = lambda x:x[0])\n",
-    "        \n",
-    "        # Initialize node\n",
-    "        for i in indexed_data.keys():\n",
-    "            node = Node()\n",
-    "            node.value = indexed_data[i][0]\n",
-    "            node.code = ''\n",
-    "            node.isleaf = True\n",
-    "            node.id = (i,)\n",
-    "            indexed_data[i] = node\n",
-    "            \n",
-    "\n",
-    "        while hp.length() > 1:\n",
-    "            # Pop two nodes from heapq\n",
-    "            popnode1 = indexed_data[hp.pop()[1]]\n",
-    "            popnode2 = indexed_data[hp.pop()[1]]\n",
-    "            \n",
-    "            '''\n",
-    "            initiate a father node, \n",
-    "            isleaf = false, \n",
-    "            value = [subnode1_value, subnode2_value]\n",
-    "            Children = [popnode1, popnode2]\n",
-    "            '''\n",
-    "            \n",
-    "            father_node = Node()\n",
-    "            father_node.code = ''\n",
-    "            father_node.isleaf = False\n",
-    "            father_node.id = popnode1.id + popnode2.id       \n",
-    "            father_node.value = popnode1.value + popnode2.value\n",
-    "            father_node.children.append(popnode1)\n",
-    "            father_node.children.append(popnode2)\n",
-    "\n",
-    "            \n",
-    "            # push father node to the heapq\n",
-    "            hp.push((father_node.value,father_node.id))\n",
-    "            \n",
-    "            # store father node into hashtable\n",
-    "            indexed_data[father_node.id] = father_node\n",
-    "        \n",
-    "        # Expend the root node and assign code\n",
-    "        self.expend_fathernode(father_node)\n",
-    "        \n",
-    "        # Compute the max length of code\n",
-    "        max_length = max([len(i) for i in self.codedict.values()])\n",
-    "        min_length = min([len(i) for i in self.codedict.values()])\n",
-    "        \n",
-    "\n",
-    "        print('Need bits:',sum([len(self.codedict[i[1]]) * i[0] for i in listed_data]))\n",
-    "\n",
-    "\n",
-    "        return (max_length,min_length)"
+    "        pass\n",
+    "        \n"
    ]
   },
   {
@@ -186,10 +159,10 @@
    ],
    "source": [
     "processLine = lambda x : list(map(int,map(str.strip,x.split())))\n",
-    "arg = {'fileName':'./data/huffman.txt','numLines':None ,  'processLine' : processLine  }\n",
+    "arg = {'fileName':'./data/median.txt','numLines':None ,  'processLine' : processLine  }\n",
     "\n",
     "d = DataLoader(**arg)\n",
-    "m = Huffman()\n",
+    "m = TwoHeapsMedian()\n",
     "s = Setting(d,m,False)\n",
     "s.run()"
    ]
@@ -199,140 +172,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Week3 code2 Maximum weight independent set (path graph)"
+    "s"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 625,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class mwi_set(Model):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        \n",
-    "    def preprocess(self):\n",
-    "        self.data = self.dataLoader.data[1:]\n",
-    "        self.data = [i[0] for i in self.data]\n",
-    "        \n",
-    "        self.result_dict = {}\n",
-    "    \n",
-    "    def mwi(self,data):\n",
-    "        if len(data) == 1: \n",
-    "            self.result_dict[len(data)] = data[0] \n",
-    "            return data[0]\n",
-    "        \n",
-    "        if len(data) == 2: \n",
-    "            self.result_dict[len(data)] = max(data)\n",
-    "            return max(data)\n",
-    "\n",
-    "        if len(data) > 2:\n",
-    "            length = len(data)\n",
-    "            try:\n",
-    "                value1 = self.result_dict[length - 1]\n",
-    "            except:\n",
-    "                value1 = self.mwi(data[:length - 1])\n",
-    "                self.result_dict[length - 1] = value1\n",
-    "                \n",
-    "            try:\n",
-    "                value2 = self.result_dict[length - 2]\n",
-    "            except:\n",
-    "                value2 = self.mwi(data[:length - 2])\n",
-    "                self.result_dict[length - 2] = value2\n",
-    "\n",
-    "            result =  max(value1,value2  + data[len(data)-1])\n",
-    "            self.result_dict[length] = result\n",
-    "            return result\n",
-    "\n",
-    "    def find_path(self,result_list):\n",
-    "        S = set()\n",
-    "        i = len(result_list)-1\n",
-    "        while i>=0:\n",
-    "            if result_list[i-1] > result_list[i-2] + self.data[i]:\n",
-    "                i = i - 1\n",
-    "            else:\n",
-    "                S.add(i)\n",
-    "                i = i-2\n",
-    "                if i == 0:\n",
-    "                    S.add(i)\n",
-    "        return S\n",
-    "    \n",
-    "    def compute_bit(self,S):\n",
-    "        targ_v = [1,2,3,4,17,117,517,997]\n",
-    "        \n",
-    "        return [1 if (i-1 in S) else 0 for i in targ_v]\n",
-    "    \n",
-    "    \n",
-    "    def model(self):\n",
-    "        data = self.data\n",
-    "        self.mwi(data)\n",
-    "        result_list = [self.result_dict[i+1] for i in range(len(self.result_dict))]\n",
-    "        S = self.find_path(result_list)\n",
-    "        bitcode = self.compute_bit(S)\n",
-    "        return bitcode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 626,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data ...\n",
-      "Total 1001 lines read\n",
-      "--------------------------------------------------\n",
-      "result:[1, 0, 1, 0, 0, 1, 1, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "processLine = lambda x : list(map(int,map(str.strip,x.split())))\n",
-    "arg = {'fileName':'./data/mwis.txt','numLines':None ,  'processLine' : processLine  }\n",
-    "\n",
-    "d = DataLoader(**arg)\n",
-    "m = mwi_set()\n",
-    "s = Setting(d,m,False)\n",
-    "s.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -372,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
