--- a/course2/Week3Code.ipynb
+++ b/course2/Week3Code.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week3 code1 Median Maintenance & heap implementation\n",
+    "## Week3 code1 Median Maintenance & Heap Implementation\n",
     "This week I implement a heap class with two methods \"Insert\" and \"popmin\" with O(log(n)) time complicity. And then, using heap class I implemented to construct an Median Maintenance algorithm, which could maintenance the median when a stream of numbers pour in. That is, when a new number come, it will compute a new median with in O(log(n)) time.\n",
     "\n",
     "Coursera link:https://www.coursera.org/learn/algorithms-graphs-data-structures/lecture/iIzo8/heaps-operations-and-applications\n",
